packages/core/src/components/radio/index.scss
@use '../../a11y';
@use '../../motion';
@use '../../spacing';
@use '../../util';

@mixin control {
	$-inner-ring: inset 0 0 0 var(--nds-field-control-border-width) var(--nds-background-color);

	border-radius: 100%;

	:checked + & {
		box-shadow: $-inner-ring;
	}

	.focus + &,
	:focus + & {
		@include a11y.focus-halo($-inner-ring);
	}
}

@mixin style {
	@include util.declare('radio') {
		.nds-field__control--radio {
			@include control;
		}
	}
}

